--- a/html/breakout.html
+++ b/html/breakout.html
@@ -60,7 +60,7 @@
         for (var r = 0; r < brickRawCount; r++) {
             var brickX = (c*(brickWidth+brickPadding))+brickOffsetLeft;
             var brickY = (r*(brickHeight+brickPadding))+brickOffsetTop;
-            bricks[c][r] = {x:brickX, y:brickY };
+            bricks[c][r] = {x: brickX, y: brickY, status: 1 };
         }
     }
 
@@ -69,8 +69,13 @@
         for (var c = 0; c < brickColumnCount; c++) {
             for (var r = 0; r < brickRawCount; r++) {
 
+                var b = bricks[c][r];
+                if (b.status == 0) {
+                    continue;
+                }
+
                 context.beginPath();
-                context.rect(bricks[c][r].x, bricks[c][r].y, brickWidth, brickHeight);
+                context.rect(b.x, b.y, brickWidth, brickHeight);
                 context.fillStyle = "#0095DD";
                 context.fill();
                 context.closePath();
@@ -132,6 +137,27 @@
             paddleX += 7;
         } else if (leftPressed && paddleX > 0) {
             paddleX -= 7;
+        }
+
+        collisionDetection();
+    }
+
+    // collision detection function
+    function collisionDetection() {
+
+        for (var c = 0; c < brickColumnCount; c++) {
+            for (var r = 0; r < brickRawCount; r++) {
+                var b = bricks[c][r];
+
+                if (b.status == 0) {
+                    continue;
+                }
+
+                if (x > b.x && x < (b.x+brickWidth) && y > b.y && y < (b.y+brickHeight)) {
+                    dy = -dy;
+                    b.status = 0;
+                }
+            }
         }
     }
 
