--- a/html/breakout.html
+++ b/html/breakout.html
@@ -181,6 +181,16 @@
     // add Eventlisterns
     document.addEventListener("keydown", keyDownHandler, false);
     document.addEventListener("keyup", keyUpHandler, false);
+    document.addEventListener("mousemove", mouseMoveHandler, false);
+
+    function mouseMoveHandler(event) {
+
+        var relativeX = event.clientX - canvas.offsetLeft;
+        var paddleHalfSize = paddleWidth/2;
+        if (relativeX > paddleHalfSize && relativeX < canvas.width-paddleHalfSize) {
+            paddleX = relativeX - paddleHalfSize;
+        }
+    }
 
     function keyDownHandler(event) {
 
